fix sidebar collapse on single search results
Former-commit-id: 1146cd77b7f6e6a99d0a55ab318f696edd9244c1

--- a/app/assets/stylesheets/cornell/_search-form.css.scss
+++ b/app/assets/stylesheets/cornell/_search-form.css.scss
@@ -14,7 +14,7 @@ input.search-query {
   display: inline-block;
   margin-top: .2em;
   padding-left: .3em;
-  font-size: .8em;
+  font-size: 12px;
 }
 // .advanced-link {
 //   margin-top: .5em;
